# TinkCV

./: pyproject.toml
src/app/cv/: main.py
