[tool.poetry]
name = "tinkcv"
version = "0.1.0"
description = ""
authors = ["Jatan Dewgun <jatan.dewgun@tink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.6"
opencv-python = "^4.7.0.72"
dash = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

